# Cursor2Copilot-Rules-Coverter

./: .convertmdcrc.dev  .convertmdcrc.example  .convertmdcrc.preview  .eslintrc.json  .gitignore  .npmignore  .vscodeignore  BUILD.md  CHANGELOG.md  CursorVertEXT.code-workspace  EXTENSION.md  FEATURES.md  INSTALL.md  LICENSE  MANIFEST.in  NPM.md  PUBLISHING.md  README.md  convertmdc.py  cursorvertext-1.0.0.vsix  cursorvertext-1.1.0.vsix  cursorvertext-1.1.1.vsix  cursorvertext-1.1.2.vsix  cursorvertext-1.1.3.vsix  extension.js  install.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  setup.py
Formula/: cursor-rules-converter.rb
docs/: BUILD.md  CHANGELOG.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  NEW_FEATURES.md  NPM.md  QUICK_REFERENCE.md  SETUP_GUIDE.md
scripts/: generate-brew-sha.sh
