[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-rules-converter"
dynamic = ["version"]
description = "Convert Cursor Rules (.mdc files) to VS Code Copilot Instructions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thynaptic", email = "info@thynaptic.com"}
]
keywords = ["cursor", "copilot", "converter", "mdc", "yaml", "ai", "code-assistant", "vscode"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/thynaptic/Cursor2Copilot-Rules-Coverter"
Documentation = "https://github.com/thynaptic/Cursor2Copilot-Rules-Coverter#readme"
Repository = "https://github.com/thynaptic/Cursor2Copilot-Rules-Coverter"
"Bug Reports" = "https://github.com/thynaptic/Cursor2Copilot-Rules-Coverter/issues"

[project.scripts]
convertmdc = "convertmdc:main"
cursor-convert = "convertmdc:main"

[tool.setuptools]
py-modules = ["convertmdc"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = ["*.md", ".convertmdcrc.*"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=convertmdc --cov-report=term-missing"
